2003-03-26  Roland Krause  <roland@ca.wai.com>
	* Renamed main.f77 to main.f and adopted the various files. 
	  The simple hello world fortran application now works. 

2003-03-26 Roberto Raggi <roberto@kdevelop.org>
	* added showPart() to KDevPlugin
	* added KNotes plugin (ported from Kontact plugin)

2003-03-25 Roberto Raggi <roberto@kdevelop.org>
	* improved the plugin framework
	* added DCOP interfaces for FilterPart and CppSupportPart
	
2003-03-21 Roberto Raggi <roberto@kdevelop.org>
	*  better support for namespace and inner classes

2003-03-21 jbb <jbb@kdevelop.org>
    * src/debugger.*
    - Finally, after many years, the "sliding" breakpoint problem
      has been solved thanks to the initial efforts of
      Andras Mantia (Mantia Andras <amantia@freemail.hu>)
      See bug 48732.

2003-03-20 Roberto Raggi <roberto@kdevelop.org>
	* improved code completion

2003-03-19 Caleb Tennis <caleb@aei-tech.com>
	* Tagged Alpha 4

2003-03-18 Caleb Tennis <caleb@aei-tech.com>
	* Modified IDEAl panel layouts to be a little smarter (hopefully)
	* Committed patches by Amilcar do Carmo Lucas

2003-03-18 Roberto Raggi <roberto@kdevelop.org>
	* added the new "Add Methods" wizard
	* added the new "Add Attributes" wizard

2003-03-15 F@lk Brettschneider <falkbr@kdevelop.org>
	* applied patch of Jens Zurheide (jens.zurheide@gmx.de) that fixes some bugs

2003-03-13 Alexander Dymo <cloudtemple@mksat.net>
	* DevHelp documentation support for KDevelop.
	  All documentation collections for GNU/GNOME developers from
	  http://lidn.sourceforge.net/ are supported. Existing DevHelp
	  installation can also be scanned for documentation.

2003-03-13 Julian Rockey <linux@jrockey.com>
	* CTRL-/ does buffer switching, emacs-style

2003-03-11 Julian Rockey <linux@jrockey.com>
	* parts/filecreate
	  - finally got round to replacing file dialog with smaller, leaner widget

2003-03-11 Caleb Tennis <caleb@aei-tech.com>
	* added library version number support for QMake project
